<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:ems="10"
            android:id="@+id/result"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:focusable="false"
            android:focusableInTouchMode="true" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/operation" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/newNumber" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/newNumber" android:textStyle="bold" android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/newNumber"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:ems="10"
            android:id="@+id/newNumber"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/result"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:focusable="false"
            android:focusableInTouchMode="true"/>
    <Button
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button0" app:layout_constraintStart_toStartOf="@+id/button1"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button1" android:minWidth="48dp"/>
    <Button
            android:text="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1" app:layout_constraintStart_toStartOf="@+id/button4"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button4" android:minWidth="48dp"/>
    <Button
            android:text="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintStart_toEndOf="@+id/button1"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/button1"
            android:minWidth="48dp"/>
    <Button
            android:text="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" app:layout_constraintStart_toEndOf="@+id/button2"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/button2"
            android:minWidth="48dp"/>
    <Button
            android:text="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button7" app:layout_constraintStart_toStartOf="@+id/button7"
            android:minWidth="48dp"/>
    <Button
            android:text="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5" app:layout_constraintStart_toEndOf="@+id/button4"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/button4"
            android:minWidth="48dp"/>
    <Button
            android:text="6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button6" app:layout_constraintStart_toEndOf="@+id/button5"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/button5"
            android:minWidth="48dp"/>
    <Button
            android:text="7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button7"
            android:minWidth="48dp"
            app:layout_constraintTop_toBottomOf="@+id/newNumber" android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="@+id/newNumber"/>
    <Button
            android:text="8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button8"
            app:layout_constraintBaseline_toBaselineOf="@+id/button7" app:layout_constraintStart_toEndOf="@+id/button7"
            android:layout_marginStart="8dp" android:minWidth="48dp"/>
    <Button
            android:text="9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button9" app:layout_constraintStart_toEndOf="@+id/button8"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/button8"
            android:minWidth="48dp"/>
    <Button
            android:text="/"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonDivide" app:layout_constraintStart_toEndOf="@+id/button9"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/button9"
            android:minWidth="48dp"/>
    <Button
            android:text="*"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMultiply" app:layout_constraintStart_toEndOf="@+id/button6"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/button6"
            android:minWidth="48dp"/>
    <Button
            android:text="-"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMinus" app:layout_constraintStart_toEndOf="@+id/button3"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/button3"
            android:minWidth="48dp"/>
    <Button
            android:text="+"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPlus" app:layout_constraintStart_toEndOf="@+id/buttonEquals"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/buttonEquals"
            android:minWidth="48dp"/>
    <Button
            android:text="NEG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonNegate"
            android:minWidth="48dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonPlus"
            app:layout_constraintEnd_toEndOf="@+id/buttonPlus"/>
    <Button
            android:text="."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonDot" app:layout_constraintStart_toEndOf="@+id/button0"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/button0"
            android:minWidth="48dp"/>
    <Button
            android:text="="
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonEquals" app:layout_constraintStart_toEndOf="@+id/buttonDot"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/buttonDot"
            android:minWidth="48dp"/>
</android.support.constraint.ConstraintLayout>